--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Credit Card Default Prediction</title>
+    <title>Credit Card Default - Prediction</title>
 </head>
 
 <body>
-    <h1> Credit Card Default Prediction</h1>
+    <h1>Credit Card Default Prediction</h1>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -23,120 +23,242 @@
 
         form {
             margin-top: 20px;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+
+        .input-box {
+            display: flex;
+            flex-direction: column;
+            margin: 5px;
+        }
+
+        .input-box label {
+            font-weight: bold;
+        }
+
+        .input-box input[type="number"] {
+            width: 100px;
+            padding: 5px;
+            margin-top: 5px;
+        }
+
+        button {
+            padding: 10px 20px;
+            background-color: #333;
+            color: #fff;
+            border: none;
+            cursor: pointer;
+            margin: 10px;
+        }
+
+        h3 {
+            margin-top: 20px;
+            color: #333;
+        }
+        .btn-container {
+            display: flex;
+            justify-content: center;
+            margin-top: 20px;
         }
     </style>
     {% if current_accuracy %}
-    <h3> Last Model Trained On : {{ last_trained_model_date }} with accuracy : {{current_accuracy}} % </h3>
+    <h3>Last Model Trained On: {{ last_trained_model_date }} with accuracy: {{current_accuracy*100}}%</h3>
     {% endif %}
     {% if prediction_result %}
     <h3>Prediction Result: {{ prediction_result }}</h3>
     {% endif %}
-    <form action="/predict" method="post">
-        <form action="/predict" method="post">
-            <label for="ID">ID:</label>
-            <input type="text" id="ID" name="ID" value="6908" required><br>
     
-            <label for="LIMIT_BAL">LIMIT_BAL:</label>
-            <input type="text" id="LIMIT_BAL" name="LIMIT_BAL" value="50000" required><br>
-    
-            <label for="SEX">SEX:</label>
-            <input type="text" id="SEX" name="SEX" value="1" required><br>
-    
-            <label for="EDUCATION">EDUCATION:</label>
-            <input type="text" id="EDUCATION" name="EDUCATION" value="2" required><br>
-    
-            <label for="MARRIAGE">MARRIAGE:</label>
-            <input type="text" id="MARRIAGE" name="MARRIAGE" value="2" required><br>
-    
-            <label for="AGE">AGE:</label>
-            <input type="text" id="AGE" name="AGE" value="46" required><br>
-    
-            <label for="PAY_0">PAY_0:</label>
-            <input type="text" id="PAY_0" name="PAY_0" value="-1" required><br>
-    
-            <label for="PAY_2">PAY_2:</label>
-            <input type="text" id="PAY_2" name="PAY_2" value="-1" required><br>
-    
-            <label for="PAY_3">PAY_3:</label>
-            <input type="text" id="PAY_3" name="PAY_3" value="-1" required><br>
-    
-            <label for="PAY_4">PAY_4:</label>
-            <input type="text" id="PAY_4" name="PAY_4" value="-1" required><br>
-    
-            <label for="PAY_5">PAY_5:</label>
-            <input type="text" id="PAY_5" name="PAY_5" value="0" required><br>
-    
-            <label for="PAY_6">PAY_6:</label>
-            <input type="text" id="PAY_6" name="PAY_6" value="0" required><br>
-    
-            <label for="BILL_AMT1">BILL_AMT1:</label>
-            <input type="text" id="BILL_AMT1" name="BILL_AMT1" value="1540" required><br>
-    
-            <label for="BILL_AMT2">BILL_AMT2:</label>
-            <input type="text" id="BILL_AMT2" name="BILL_AMT2" value="26060" required><br>
-    
-            <label for="BILL_AMT3">BILL_AMT3:</label>
-            <input type="text" id="BILL_AMT3" name="BILL_AMT3" value="0" required><br>
-    
-            <label for="BILL_AMT4">BILL_AMT4:</label>
-            <input type="text" id="BILL_AMT4" name="BILL_AMT4" value="2650" required><br>
-    
-            <label for="BILL_AMT5">BILL_AMT5:</label>
-            <input type="text" id="BILL_AMT5" name="BILL_AMT5" value="3320" required><br>
-    
-            <label for="BILL_AMT6">BILL_AMT6:</label>
-            <input type="text" id="BILL_AMT6" name="BILL_AMT6" value="2764" required><br>
-    
-            <label for="PAY_AMT1">PAY_AMT1:</label>
-            <input type="text" id="PAY_AMT1" name="PAY_AMT1" value="26060" required><br>
-    
-            <label for="PAY_AMT2">PAY_AMT2:</label>
-            <input type="text" id="PAY_AMT2" name="PAY_AMT2" value="0" required><br>
-    
-            <label for="PAY_AMT3">PAY_AMT3:</label>
-            <input type="text" id="PAY_AMT3" name="PAY_AMT3" value="3472" required><br>
-    
-            <label for="PAY_AMT4">PAY_AMT4:</label>
-            <input type="text" id="PAY_AMT4" name="PAY_AMT4" value="2320" required><br>
-    
-            <label for="PAY_AMT5">PAY_AMT5:</label>
-            <input type="text" id="PAY_AMT5" name="PAY_AMT5" value="1764" required><br>
-    
-            <label for="PAY_AMT6">PAY_AMT6:</label>
-            <input type="text" id="PAY_AMT6" name="PAY_AMT6" value="2841" required><br>
-    
-            <button type="submit">Predict</button> 
-        <style>
-            label {
-                display: block;
-                margin-bottom: 10px;
-                font-weight: bold;
-            }
-    
-            input[type="text"] {
-                width: 200px;
-                padding: 5px;
-                margin-bottom: 10px;
-            }
-    
-            button {
-                padding: 10px 20px;
-                background-color: #333;
-                color: #fff;
-                border: none;
-                cursor: pointer;
-            }
-
-            h3 {
-                margin-top: 20px;
-                color: #333;
-                text-align: center;
-            }
-
-        </style>
+    <form action="/trainer" class="btn-container"> 
+        <button type = "submit">Re-Train Model</button>
     </form>
+
+    <form action="/predict" id="creditCardForm" method="post">
+        <div class="input-box">
+            <label for="ID">ID:</label>
+            <input type="number" id="ID" name="ID" value="{{ request.form.ID }}" required>
+        </div>
+
+        <div class="input-box">
+            <label for="LIMIT_BAL">LIMIT_BAL:</label>
+            <input type="number" id="LIMIT_BAL" name="LIMIT_BAL" value="{{ request.form.LIMIT_BAL }}" required>
+        </div>
+
+        <div class="input-box">
+            <label for="SEX">SEX:</label>
+            <input type="number" id="SEX" name="SEX" value="{{ request.form.SEX }}" required>
+        </div>
+
+        <div class="input-box">
+            <label for="EDUCATION">EDUCATION:</label>
+            <input type="number" id="EDUCATION" name="EDUCATION" value="{{ request.form.EDUCATION }}" required>
+        </div>
+
+        <div class="input-box">
+            <label for="MARRIAGE">MARRIAGE:</label>
+            <input type="number" id="MARRIAGE" name="MARRIAGE"  value="{{ request.form.MARRIAGE }}" required>
+        </div>
+
+        <div class="input-box">
+            <label for="AGE">AGE:</label>
+            <input type="number" id="AGE" name="AGE"  value="{{ request.form.AGE }}" required>
+        </div>
+
+        <div class="input-box">
+            <label for="PAY_0">PAY_0:</label>
+            <input type="number" id="PAY_0" name="PAY_0" value="{{ request.form.PAY_0 }}" required>
+        </div>
+
+        <div class="input-box">
+            <label for="PAY_2">PAY_2:</label>
+            <input type="number" id="PAY_2" name="PAY_2"  value="{{ request.form.PAY_2 }}"required>
+        </div>
+
+        <div class="input-box">
+            <label for="PAY_3">PAY_3:</label>
+            <input type="number" id="PAY_3" name="PAY_3" value="{{ request.form.PAY_3 }}" required>
+        </div>
+
+        <div class="input-box">
+            <label for="PAY_4">PAY_4:</label>
+            <input type="number" id="PAY_4" name="PAY_4"  value="{{ request.form.PAY_4 }}"required>
+        </div>
+
+        <div class="input-box">
+            <label for="PAY_5">PAY_5:</label>
+            <input type="number" id="PAY_5" name="PAY_5" value="{{ request.form.PAY_5 }}" required>
+        </div>
+
+        <div class="input-box">
+            <label for="PAY_6">PAY_6:</label>
+            <input type="number" id="PAY_6" name="PAY_6" value="{{ request.form.PAY_6 }}" required>
+        </div>
+
+        <div class="input-box">
+            <label for="BILL_AMT1">BILL_AMT1:</label>
+            <input type="number" id="BILL_AMT1" name="BILL_AMT1"  value="{{ request.form.BILL_AMT1 }}" required>
+        </div>
+
+        <div class="input-box">
+            <label for="BILL_AMT2">BILL_AMT2:</label>
+            <input type="number" id="BILL_AMT2" name="BILL_AMT2" value="{{ request.form.BILL_AMT2 }}"  required>
+        </div>
+
+        <div class="input-box">
+            <label for="BILL_AMT3">BILL_AMT3:</label>
+            <input type="number" id="BILL_AMT3" name="BILL_AMT3" value="{{ request.form.BILL_AMT3 }}" required>
+        </div>
+
+        <div class="input-box">
+            <label for="BILL_AMT4">BILL_AMT4:</label>
+            <input type="number" id="BILL_AMT4" name="BILL_AMT4"  value="{{ request.form.BILL_AMT4 }}" required>
+        </div>
+
+        <div class="input-box">
+            <label for="BILL_AMT5">BILL_AMT5:</label>
+            <input type="number" id="BILL_AMT5" name="BILL_AMT5"  value="{{ request.form.BILL_AMT5 }}" required>
+        </div>
+
+        <div class="input-box">
+            <label for="BILL_AMT6">BILL_AMT6:</label>
+            <input type="number" id="BILL_AMT6" name="BILL_AMT6" value="{{ request.form.BILL_AMT6 }}" required>
+        </div>
+
+        <div class="input-box">
+            <label for="PAY_AMT1">PAY_AMT1:</label>
+            <input type="number" id="PAY_AMT1" name="PAY_AMT1" value="{{ request.form.PAY_AMT1 }}"  required>
+        </div>
+
+        <div class="input-box">
+            <label for="PAY_AMT2">PAY_AMT2:</label>
+            <input type="number" id="PAY_AMT2" name="PAY_AMT2" value="{{ request.form.PAY_AMT2 }}" required>
+        </div>
+
+        <div class="input-box">
+            <label for="PAY_AMT3">PAY_AMT3:</label>
+            <input type="number" id="PAY_AMT3" name="PAY_AMT3"  value="{{ request.form.PAY_AMT3 }}" required>
+        </div>
+
+        <div class="input-box">
+            <label for="PAY_AMT4">PAY_AMT4:</label>
+            <input type="number" id="PAY_AMT4" name="PAY_AMT4"  value="{{ request.form.PAY_AMT4 }}" required>
+        </div>
+
+        <div class="input-box">
+            <label for="PAY_AMT5">PAY_AMT5:</label>
+            <input type="number" id="PAY_AMT5" name="PAY_AMT5" value="{{ request.form.PAY_AMT5 }}" required>
+        </div>
+
+        <div class="input-box">
+            <label for="PAY_AMT6">PAY_AMT6:</label>
+            <input type="number" id="PAY_AMT6" name="PAY_AMT6" value="{{ request.form.PAY_AMT6 }}" required>
+        </div> 
+       
+        <div class="btn-container">
+            <button type="button" onclick="predict()">Predict</button>
+            <button type="button" onclick="resetValues()">Reset Values</button>
+            <button type="button" onclick="fillSampleDefaultData()">Fill Sample Default Data</button>
+            <button type="button" onclick="fillSampleNotDefaultData()">Fill Sample Not Default Data</button>
+        </div>
+    </form>
+
     {% if prediction_result %}
     <h3>Prediction Result: {{ prediction_result }}</h3>
     {% endif %}
+    <form action="/">
+        <div class="btn-container">
+            <button type="submit">Home Page</button>
+        </div>
+    </form>
+  
+
+
+    <script>
+        function resetValues() {
+            // Get all input elements of type "number"
+            const inputElements = document.querySelectorAll('input[type="number"]');
+            
+            // Set the value of each input element to 0
+            inputElements.forEach((element) => {
+                element.value = 0;
+            });
+        }
+        function fillSampleDefaultData() {
+            const sampleDefaultData = [ 26151,50000,2,2,1,34,3,3,
+            2,2,2,2,47904,48240,48602,46289, 44837,44535, 2000, 2001,
+            499, 2000, 2000, 1500,
+            ];
+
+            const inputElements = document.querySelectorAll('input[type="number"]');
+            for (let i = 0; i < inputElements.length; i++) {
+                inputElements[i].value = sampleDefaultData[i];
+            }
+        }
+        function fillSampleNotDefaultData() {
+            const sampleNotDefaultData = [
+                25228, 90000, 2, 1, 2, 24, 0, 0, 0, 0, 0, 0,
+                53173, 19825, 20840, 21023, 20776, 21055,
+                1324, 1339, 1638, 890, 763, 769
+            ];
+
+            const inputElements = document.querySelectorAll('input[type="number"]');
+            for (let i = 0; i < inputElements.length; i++) {
+                inputElements[i].value = sampleNotDefaultData[i];
+            }
+        }
+        function predict() {
+            // Get the form element
+            const form = document.getElementById('creditCardForm');
+
+            // Perform any necessary validation or manipulation before submission
+            // ...
+
+            // Submit the form using JavaScript
+            form.submit();
+        }
+    </script>
 </body>
 </html>
+
+
