--- a/templates/index.html
+++ b/templates/index.html
@@ -73,7 +73,7 @@
 
    
     <form action="/trainer" class="btn-container"> 
-        <button type = "submit">Re-Train Model</button>
+        <!-- <button type = "submit">Re-Train Model</button> -->
     </form>
     <form action="/predict" id="creditCardForm" method="post">
         <div class="input-box">
@@ -199,8 +199,8 @@
         <div class="btn-container">
             <button type="button" onclick="predict()">Predict</button>
             <button type="button" onclick="resetValues()">Reset Values</button>
-            <button type="button" onclick="fillSampleDefaultData()">Fill Sample Default Data</button>
-            <button type="button" onclick="fillSampleNotDefaultData()">Fill Sample Not Default Data</button>
+            <!-- <button type="button" onclick="fillSampleDefaultData()">Fill Sample Default Data</button> -->
+            <!-- <button type="button" onclick="fillSampleNotDefaultData()">Fill Sample Not Default Data</button> -->
         </div>
     </form>
     {% if prediction_result  %}
